<resources>
    <string name="app_name">CommunityService</string>
    <string name="app_name_zh">社区服务</string>

    <string name="public_notice">公告</string>
    <string name="help">来帮忙</string>
    <string name="market">超市</string>
    <string name="mine">我的</string>

    <!--notice-->
    <string name="more_notice">更多通知</string>
    <string name="notice_title_default">公告</string>
    <string name="notice_content_default">经过和业委会沟通，确定拨款维修大桥。在此公示，有任何疑问可以致电小区物业中心，联系电话：021-211541445 \n</string>
    <string name="notice_time_default">2017-04-03</string>
    <string name="notice_write_default">小区物业中心</string>

    <string name="notice_net_error">获取公告失败，请检查网络链接</string>


    <string name="test_notice_content">公告 \n 经过和业委会沟通，确定拨款维修大桥。在此公示，有任何疑问可以致电小区物业中心，联系电话：021-211541445 \n 公告时间：2017-03-22</string>



    <!--help sell-->
    <string name="renting_and_sellers">租房／买卖房屋</string>
    <string name="second_hand_market">跳蚤市场</string>
    <string name="appliance_repair">家电维修／其他帮助</string>

    <string name="default_name">bobo </string>
    <string name="default_price">15$ </string>
    <string name="default_title">好东西，快来看看 </string>
    <string name="default_des">这是一个好东西，有便宜。买了之后没有用多久，如果有需要的可以联系我，手头还有好几个。</string>
    <string name="default_like">赞·112</string>



    <!--mine string-->
    <string name="login_on">登录</string>
    <string name="register">注册</string>
    <string name="check_in">签到</string>

    <string name="mine_star">我的关注</string>
    <string name="mine_publish">我的发布</string>
    <string name="mine_order">我的订单</string>
    <string name="mine_selled">我的订单</string>
    <string name="user_feedback">意见反馈</string>
    <string name="system_settings">系统设置</string>
    <string name="user_info_setting">编辑资料</string>
    <string name="account_binds">账号绑定</string>
    <string name="clean_cache">清空缓存</string>
    <string name="about_us">关于我们</string>
    <string name="version_check">版本检查</string>
    <string name="login_out">退出登陆</string>

    <string name="help_center">帮助说明</string>
    <string name="my_integration">我的积分</string>

    <string name="user_name">用户名</string>
    <string name="user_nick_name">昵称</string>
    <string name="my_address">收获地址管理</string>
    <string name="sex">性别</string>
    <string name="user_icon">头像</string>
    <string name="default_user_name">我是小蜜蜂</string>

    <!-- login & register -->
    <string name="prompt_user_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_confirm_password">再次输入密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_user_name">用户名至少8位</string>
    <string name="error_invalid_old_password">原密码太短</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_password_not_same">两次输入密码不相同</string>
    <string name="error_field_required">用户名不能为空</string>
    <string name="error_user_already_exists">用户名已存在</string>
    <string name="error_user_not_exists">该用户不存在</string>
    <string name="error_network">网络错误</string>
    <string name="login_success">登陆成功</string>
    <string name="action_register">创建新账号</string>
    <string name="action_register_short">注册</string>
    <string name="login_no_account_yet">还没有账号？创建一个</string>
    <string name="login_already_a_member">已经注册？登陆 </string>

    <!--sell item default value-->
    <string name="sell_item_default_title">默认标题</string>
    <string name="sell_item_default_description">默认描述</string>
    <string name="sell_item_default_price">默认价格</string>
    <string name="sell_item_default_user_name">默认用户名</string>
    <string name="sell_item_default_comments">默认评论</string>
    <string name="goods_is_selled">商品已卖出</string>

    <!-- my publish-->
    <string name="publish_new_item">我要发布</string>
    <string name="publish_title">发布</string>
    <string name="publish_item_title_hint">标题 品类 品牌型号</string>
    <string name="publish_item_description_hint">描述一下你的宝贝</string>
    <string name="publish_item_add_img">添加图片</string>

    <string name="publish_item_price">价格</string>
    <string name="publish_item_type">分类</string>
    <string name="publish_item_type_choice">请选择分类</string>
    <string name="publish_item_sure">确定发布</string>
    <string name="item_sell_price">￥%1$.2f</string>
    <string name="item_like_count">赞 %1$d</string>



    <!--system setting-->
    <string name="system_setting_edit_userinfo">个人资料设置</string>
    <string name="system_setting_bind_account">账号绑定</string>
    <string name="system_setting_clear_cache">清空缓存</string>
    <string name="system_setting_about_us">关于我们</string>
    <string name="system_setting_check_vesion">版本检查</string>

    <string name="system_setting_logout">退出登录</string>
    <string name="about_content">社区助手 是基于DroiBaas开发的社区社交的应用</string>

    <string name="clear_cache_toast">缓冲已经清理完毕！</string>


    <!--user info edit-->
    <string name="user_header_icon">头像</string>
    <string name="user_sex">性别</string>
    <string name="user_nickname">昵称</string>
    <string name="user_address">地址</string>
    <string name="user_phoneNumber">地址</string>
    <string name="female">女</string>
    <string name="male">男</string>

    <string name="cancel">取消</string>
    <string name="ok">确认</string>

    <string name="hint_nickname">请输入昵称</string>
    <string name="hint_address">请输入地址</string>


    <!--user info-->
    <string name="make_comments">评论</string>
    <string name="make_likes">点赞</string>
    <string name="buy_it">买下</string>
    <string name="have_selled">已卖出</string>


    <!--public error-->
    <string name="goods_title_error">商品标题不能为空</string>
    <string name="goods_des_error">商品描述不能为空</string>
    <string name="goods_price_error">商品价格必须大于0</string>
    <string name="img_in_upload">图片未上传完成，请稍后再试！</string>
    <string name="no_img_error">必须要有图片描述</string>
    <string name="goods_type_error">请选择类型</string>
    <string name="goods_wait_for_saving">正在保存数据，请稍等</string>
    <string name="file_wait_for_saving">文件暂未上传，请稍等。。。</string>


    <!--user info-->
    <string name="user_info_title">我的信息</string>

</resources>

