<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="NewPublishBinding">

    </data>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/publish_title"
            android:layout_alignParentTop="true"
            android:text="@string/publish_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"/>

        <EditText
            android:layout_below="@id/publish_title"
            android:id="@+id/publish_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/publish_item_title_hint"/>

        <EditText
            android:layout_below="@id/publish_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/publish_item_descripton"
            android:hint="@string/publish_item_description_hint"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/imglist"
            android:layout_margin="5dp"
            android:layout_below="@id/publish_item_descripton"
            android:layout_width="match_parent"
            android:layout_height="100dp">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_margin="5dp"
            android:id="@+id/price_container"
            android:layout_below="@id/imglist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_margin="5dp"
                android:text="@string/publish_item_price"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <EditText
                android:layout_margin="5dp"
                android:id="@+id/price_input"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="输入价格"
                android:inputType="numberDecimal|number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:id="@+id/type_container"
            android:layout_below="@id/price_container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_item_type"/>

            <TextView
                android:id="@+id/type_choose"
                android:layout_margin="5dp"
                android:text="@string/publish_item_type_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"/>
        </LinearLayout>


        <Button
            android:id="@+id/publish_sure"
            android:layout_below="@id/type_container"
            android:text="@string/publish_item_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"/>

    </RelativeLayout>

</layout>