<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data class="SystemSettingBinding">
        <variable
            name="settingmodel"
            type="com.bobo.communityservice.viewmodel.SystemSettingModel">
        </variable>
    </data>
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/setting_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:text="@string/system_settings"
            />

        <LinearLayout
            android:id="@+id/edit_user"
            android:layout_below="@id/setting_title"
            android:onClick="@{settingmodel.handlerEditUserInfo}"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/system_setting_edit_userinfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="25dp"
                />

            <ImageView android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/right_point">

            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bind_account"
            android:layout_below="@id/edit_user"
            android:layout_marginTop="20dp"
            android:onClick="@{settingmodel.handlerAccountBinding}"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/account_binds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="25dp"
                />

            <ImageView android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/right_point">

            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/bind_account"
            android:id="@+id/clear_cache"
            android:onClick="@{settingmodel.handlerClearCache}"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/clean_cache"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="25dp"
                />

            <ImageView android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/right_point">

            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/clear_cache"
            android:id="@+id/about_us"
            android:onClick="@{settingmodel.handlerAboutUs}"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/about_us"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="25dp"
                />

            <ImageView android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/right_point">

            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/about_us"
            android:id="@+id/check_version"
            android:onClick="@{settingmodel.handlerCheckVersion}"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/version_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="25dp"
                />

            <ImageView android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/right_point">

            </ImageView>
        </LinearLayout>

        <Button
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:onClick="@{settingmodel.handlerLoginOut}"
            android:id="@+id/logout"
            android:text="@string/login_out"
            android:textSize="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>

</layout>