<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="MineBinding">
        <variable
            name="mineViewModel"
            type="com.bobo.communityservice.viewmodel.MineViewModel"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.bobo.communityservice.view.CircleImageView
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/usr_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            app:imageUrl="@{mineViewModel.user.Icon.getUri}"
            app:placeHolder="@{@drawable/take_position}"
            app:error="@{@drawable/default_icon}"/>


        <LinearLayout
            android:layout_toRightOf="@id/usr_icon"
            android:layout_alignTop="@id/usr_icon"
            android:id="@+id/login_status_view"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_margin="10dp"
                android:text="@{mineViewModel.user.nickname}"
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:text="@string/system_setting_edit_userinfo"
                android:layout_margin="10dp"
                android:id="@+id/edit_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <!--mine list view style-->
        <RelativeLayout
            android:layout_toRightOf="@id/usr_icon"
            android:layout_alignTop="@id/usr_icon"
            android:id="@+id/register_or_loging"
            android:layout_width="150dp"
            android:gravity="center_vertical"
            android:layout_height="100dp">

            <Button
                android:id="@+id/login_on"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:text="@string/login_on"
                android:gravity="center"
                android:layout_centerVertical="true"
                />

            <View
                android:id="@+id/action_divider"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/login_on"
                android:layout_margin="1dp"
                android:layout_width="3dp"
                android:layout_height="45dp"
                android:background="@android:color/darker_gray"
                />

            <Button
                android:id="@+id/user_register"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:text="@string/register"
                android:layout_toRightOf="@id/action_divider"
                />
        </RelativeLayout>


        <Button
            android:id="@+id/checkin_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/check_in"
            android:background="@android:color/transparent"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:layout_alignBaseline="@id/register_or_loging"
            />

         <!--mine star view-->
        <View
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/darker_gray"
            />

        <LinearLayout
            android:layout_below="@id/divider_1"
            android:id="@+id/star_container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >
            <ImageView
                android:id="@+id/star_icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/my_start"
                android:paddingLeft="10dp"
                />

            <TextView
                android:id="@+id/my_star_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/mine_star"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textSize="25dp"
                />
        </LinearLayout>


        <!--mine publish view -->
        <View
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="5dp"
            android:layout_below="@id/star_container"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/publish_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_2"
            >
            <ImageView
                android:id="@+id/publish_icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/my_public_content"
                android:paddingLeft="10dp"
            />

            <TextView
                android:id="@+id/my_public_text"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/mine_publish"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textSize="25dp"
                />

        </LinearLayout>



        <!--mine order view -->
        <View
            android:id="@+id/divider_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="5dp"
            android:layout_below="@id/publish_container"
            />

        <LinearLayout
            android:layout_below="@id/divider_3"
            android:id="@+id/order_container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_below="@id/divider_3"
                android:id="@+id/order_icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/my_order"
                android:paddingLeft="10dp"
                />
            <TextView
                android:id="@+id/my_order_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/mine_order"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textSize="25dp"
                />
        </LinearLayout>


        <View
            android:id="@+id/divider_4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="5dp"
            android:layout_below="@id/order_container"
            />

        <View
            android:layout_below="@id/divider_4"
            android:id="@+id/divider_2_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="5dp"
            />

        <LinearLayout
            android:layout_below="@id/divider_2_1"
            android:orientation="horizontal"
            android:id="@+id/feedback_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/feedback_icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/feed_back"
                android:paddingLeft="10dp"
                />
            <TextView
                android:id="@+id/feed_back_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/user_feedback"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textSize="25dp"
                />
        </LinearLayout>



        <View
            android:id="@+id/divider_2_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="5dp"
            android:layout_below="@id/feedback_container"
            />

        <LinearLayout
            android:layout_below="@id/divider_2_2"
            android:id="@+id/setting_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_below="@id/divider_2_2"
                android:id="@+id/settings_icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/feed_back"
                android:paddingLeft="10dp"
                />
            <TextView
                android:id="@+id/settings_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/system_settings"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textSize="25dp"
                />
        </LinearLayout>


        <View
            android:id="@+id/divider_2_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="5dp"
            android:layout_below="@id/setting_container"
            />
    </RelativeLayout>
</layout>
